--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -707,15 +707,15 @@ The ΛCDM model is a refinement of the Big Bang model, and it is the standard mo
 \begin{itemize}
 	\item the expansion of the universe,
 	\item the big bang nucleosynthesis, and
-	\item the cosmic microwave background.
+	\item the cosmic microwave background (CMB).
 \end{itemize}
 
-According to ΛCDM, the energy content of the universe today is made up of radiation, matter, dark matter, and dark energy. Their contributions today are:
+According to ΛCDM, the energy content of the universe today is made up of radiation, matter (consists of baryons and dark matter), and dark energy. Their contributions today are:
 \begin{itemize}
-	\item Photons and neutrinos: $\Omega_{\gamma,0} \approx \Omega_{\nu,0}/0.68 \approx \num{2.5e-5} h^{-2}$
+	\item Radiation: Photons and neutrinos: $\Omega_{\gamma,0} \approx \Omega_{\nu,0}/0.68 \approx \num{2.5e-5} h^{-2}$
 	\item Baryons:  $\Omega_{b,0} \approx 0.05$
 	\item Dark Matter: $\Omega_{dm,0} \approx 0.25$
-	\item Dark Energy: $\Omega_\Lambda \approx 0.7$
+	\item Dark Energy: $\Omega_{DE} \approx 0.7$
 \end{itemize}
 We now look at the constituents in more detail.
 
@@ -723,8 +723,8 @@ We now look at the constituents in more detail.
 
 As radiation, we classify those particles that are still relativistic today. Accordingly, they need to have very low mass.
 \begin{itemize}
-	\item Most photons are part of the CMB and haven a temperature $T\approx \SI{2.73}{\kelvin}$. They contribute only very little to the energy density: $\Omega_{\gamma,0} = \num{2.5e-5}$.
-	\item Massless\sidenote{Because of neutrino oscillations, we strongly suspect that neutrinos actually have mass, but it is very low.} neutrinos contribute about the same as photons: $\Omega_{\nu,0} = 0.68 \Omega_{\gamma,0} \approx \num{1.7e-5}$.
+	\item Most photons are part of the CMB and have a temperature $T_{CMB} \approx \SI{2.73}{\kelvin}$. They contribute only very little to the energy density: $\Omega_{\gamma,0} = \num{2.5e-5} h^{-2}$.
+	\item Massless\sidenote{Because of neutrino oscillations, we strongly suspect that neutrinos actually have mass, but it is very low.} neutrinos contribute about the same as photons: $\Omega_{\nu,0} = 0.68 \Omega_{\gamma,0} \approx \num{1.7e-5} h^{-2}$.
 \end{itemize}
 
 \subsection*{Baryons}
@@ -749,14 +749,14 @@ A good candidate for dark matter are particles beyond the standard model, such a
 Massive Compact Halo Objects (MACHOs), such as black holes, are not good candidates, since objects with masses from $\num{e-6}$ to $15\, M_\sol$ are ruled out.
 
 \subsection*{Dark Energy}
-Dark Energy contributes $\Omega_\text{de} \approx 0.7$. It is needed to get a flat geometry for the universe, and to explain the recent acceleration of the expansion of the universe.
+Dark Energy contributes $\Omega_\text{DE} \approx 0.7$. It is needed to get a flat geometry for the universe, and to explain the recent acceleration of the expansion of the universe.
 
 From the first Friedmann equation, we know that a constant energy density results in a scale factor $a \propto e^{Ht}$ that is exponentially growing. Consider an effective fluid with equation of state $p_\text{DE} = w \rho_\text{DE} c^2$. We demand $\ddot{a} > 0$, and the second Friedmann equation then yields $w < -1/3$.
 
 There are a few possible candidates:
 \begin{itemize}
-	\item The cosmological constant $\Lambda$ corresponds to $w=-1$, independent of time.
-	\item A model called \emph{quintessence}, which is a dynamical scalar field, would give rise to another form of energy. Since it is dynamical, you can map it to an effective fluid, with a $w$ that varies in time.
+	\item The cosmological constant $\Lambda$ which is independent of time corresponds to $w=-1$.
+	\item A model called \emph{quintessence}, which is a dynamical scalar field, would give rise to another form of energy. Since it is dynamical, you can map it to an effective fluid, with a $w$ (-1 < $w$ < -1/3) that varies in time.
 	\item There could be a theory of gravity that can improve upon or replace general relativity.
 \end{itemize}
 Current constraints demand $w = -1$ with an uncertainty of about \SI{5}{\percent}. The cosmological constant is thus a model that is consistent with observations, and it is part of the ΛCDM model.
