--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -625,7 +625,7 @@ But the neutrons are unstable to beta decay $n \leftrightarrow p + e + \bar{\nu}
 where $\tau_n \propto 887$ s is the mean lifetime of the neutrons.\\
 Nonetheless we still have a large abundance of neutrons in the Universe today. Since shortly before the Universe reaches $t = \tau_n$ most neutrons have already ended up in a helium nuclei, which stabilizes them against the beta decay (due to the Pauli's exclusion principle).  
 
-\subsection*{Nuclear reactions}
+\subsection{Nuclear reactions}
 
 Once the temperature drops below \SI{1}{\MeV}, which is the binding energy of a typical nucleus, the nuclei start forming. A chain of nuclear reactions can occur then:
 \begin{align*}
@@ -646,7 +646,8 @@ Once the temperature drops below \SI{1}{\MeV}, which is the binding energy of a 
 	\ce{^4He + ^3He &<=> \gamma{} + ^7Be} &
 	\ce{^7Be + e &<=> \nu_e + ^7Li}
 \end{align*}
-For each of these reactions, there is a Boltzmann equation which describes the evolution of the number densities. This coupled system of equations can be solved numerically to find the abundances of nuclei. The solution for a few nuclei is shown in \cref{fig:nucleosynthesis}. The different mass fractions are $H \propto 0.75$, $ ^4He \propto 0.25$, $D/H \propto 3\cdot 10^{-5}$, $ ^3He/H \propto 10^{-5}$ and $ ^7Li/H \propto 10^{-10}$.
+For each of these reactions, there is a Boltzmann equation which describes the evolution of the number densities. This coupled system of equations can be solved numerically to find the abundances of nuclei. The solution for a few nuclei is shown in \cref{fig:nucleosynthesis}.
+The different mass fractions are $\ce{H} \approx 0.75$, $ \ce{^4He} \approx 0.25$, $\ce{D}/\ce{H} \approx \num{3e-5}$, $ \ce{^3He}/\ce{H} \approx \num{e-5}$, and $\ce{^7Li}/\ce{H} \approx \num{e-10}$.
 
 
 \begin{marginfigure}
