--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -579,17 +579,17 @@ The solution of the Boltzmann equation is
 The $g$'s are degeneracy factors and satisfy $g_{*s}(x_0) \leq g_{*s}(x_f)$, and the photon density is $\Omega_{\gamma,0} h^2 = \num{2.5e-5}$. It follows that $\Omega_{i,0}$ is very small, which means that hot relic particles contribute very little to today's energy density.
 
 \newacronym{wimp}{WIMP}{weakly interacting massive particle}
-\subsection{\Acp{wimp}}
+\subsection{\textsc{Wimp}s}
 
 
-Next we consider \acp{wimp}. Examples are massive neutrinos and stable, light supersymmetric particles. \acp{wimp} can either be hot ($x_f \ll 1$) or cold ($x_f \gg 1$).
+Next, we consider \acp{wimp}. Examples are massive neutrinos and stable, light supersymmetric particles. \acp{Wimp} can either be hot ($x_f \ll 1$) or cold ($x_f \gg 1$).
 
 \paragraph*{Hot \acp{wimp}}
 The solution of the Boltzmann equation yields
 \begin{align*}
 	\Omega_{i,0} h^2 = \num{7.64e-2} 
 	\left( \frac{g_{i,\text{eff}}}{g_{*s}(x_f)} \right)
-	\frac{m_i}{\si{\eV}}
+	\frac{m_i}{\si{\eV}}.
 \end{align*}
 Since we know that $\Omega_{i,0} < 1$, we can get a constraint $m_i < \SI{94}{\eV}$ on the mass of the hot \acp{wimp}, which is possible for neutrinos. However, hot \acp{wimp} are ruled out as dark matter by structure formation arguments.
 
@@ -600,9 +600,9 @@ Boltzmann says
 	&= \begin{cases}
 	1.8 \left( \frac{m_i}{\si{\GeV}} \right)^{-2} 
 	\left[ 1 + 0.17 \ln\left( \frac{m_i}{\si{\GeV}} \right) \right]
-	& \text{if } m_i < \SI{100}{\GeV}\\
+	& \text{if } m_i < \SI{100}{\GeV},\\
 	\left( \frac{m_i}{\SI{3}{\TeV}} \right)^2
-	& \text{if } m_i > \SI{100}{\GeV}
+	& \text{if } m_i > \SI{100}{\GeV}.
 	\end{cases}
 \end{align*}
 To get $\Omega_{i,0} < 1$, we need $m_i$ to be between $\SI{1.4}{\GeV}$ and $\SI{3}{\TeV}$. Cold \acp{wimp} are good candidates for dark matter.
